Now checks the screen mode to be set if it is already the active one (and do nothing if that's the case). Accidently this also fixes bug #1010.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@20049 a95241bf-73f2-0310-859d-f6bbb57e9c96